[package]
name = "biolance-cli"
description = "Command-line interface for BioLance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "biolance"
path = "src/main.rs"

[dependencies]
biolance-core     = { workspace = true }
biolance-variants = { workspace = true }
tokio             = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
